--- a/package.json
+++ b/package.json
@@ -26,8 +26,14 @@
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-material-ui-carousel": "^3.4.2",
+    "react-slick": "^0.29.0",
     "react-svg": "^16.1.8",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.3.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10"
   }
 }
