--- a/package.json
+++ b/package.json
@@ -35,5 +35,11 @@
   },
   "devDependencies": {
     "@types/react-slick": "^0.23.10"
-  }
+  },
+  "resolutions": {
+    "**/**/**": {
+      "force": true
+    }
+}
+
 }
