--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/react-slick": "^0.23.10"
+    "@types/react-slick": "^0.23.10",
+    "web-vitals": "^3.3.1"
   },
   "resolutions": {
     "**/**/**": {
       "force": true
     }
-}
-
+  }
 }
