--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "kingpadv2-landing-page",
   "version": "0.1.0",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "CI='' next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
