--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kingpadv2-landing-page",
   "version": "0.1.0",
-  "license": "MIT",
+  "license": "tomtom",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -16,7 +16,7 @@
     "@mui/material": "^5.12.2",
     "@mui/system": "^5.12.1",
     "@types/node": "18.15.13",
-    "@types/react": "18.0.37",
+    "@types/react": "^18.2.42",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
@@ -31,11 +31,14 @@
     "react-slick": "^0.29.0",
     "react-svg": "^16.1.8",
     "slick-carousel": "^1.8.1",
+    "swc-loader": "^0.2.3",
     "tailwindcss": "^3.3.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
     "@types/react-slick": "^0.23.10",
+    "@types/react-svg": "^5.0.0",
     "web-vitals": "^3.3.1"
   },
   "resolutions": {
